--- a/src/index.html
+++ b/src/index.html
@@ -39,13 +39,27 @@
   </div>
 
   <script id="template-ad1-page" type="text/x-handlebars-template">
-    Zadanie 1
+    <section class="ad">
+      <div class="task1">
+        <div class="products">
+
+        </div>
+      </div>
+    </section>
   </script>
   <script id="template-ad2-page" type="text/x-handlebars-template">
-    Zadanie 2
+    <section class="ad">
+      <div class="task2">
+
+      </div>
+    </section>
   </script>
   <script id="template-ad3-page" type="text/x-handlebars-template">
-    Zadanie 3
+    <section class="ad">
+      <div class="task3">
+
+      </div>
+    </section>
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
